# plotjuggler-release

./: CHANGELOG.rst  CLAUDE.md  CMakeLists.txt  COMPILE.md  Dockerfile  Dockerfile-humble-appimage  ISSUES.md  Plotjuggler.rc  README.md  conanfile.txt  debian.store  flake.nix  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml  win32build.bat
.github/: copilot-instructions.md
DEBIAN/: _control.24.04  _control.bookworm  _control.trixie
appimage/: AppImage.sh  Dockerfile  build_appimage.sh  build_in_docker.sh
cmake/: find_or_download_data_tamer.cmake
debian/: changelog  control  gbp.conf  rules
installer/: config.xml
plotjuggler_app/: CMakeLists.txt  aboutdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multifile_prefix.ui  plot_docker_toolbar.cpp  plotwidget.cpp  resource.qrc  statistics_dialog.cpp  (+2 more)
plotjuggler_plugins/ParserROS/rosx_introspection/: .clang-format  CMakeLists.txt
plotjuggler_plugins/ParserROS/rosx_introspection/include/rosx_introspection/: idl_parser.hpp  idl_types.hpp  msgpack_utils.hpp  ros_field.hpp  ros_message.hpp  ros_parser.hpp  ros_type.hpp  stringtree_leaf.hpp  tree.hpp  variant.hpp
plotjuggler_plugins/ParserROS/rosx_introspection/include/rosx_introspection/contrib/: nanocdr.hpp
plotjuggler_plugins/ParserROS/rosx_introspection/include/rosx_introspection/ros_utils/: ros2_helpers.hpp
plotjuggler_plugins/ParserROS/rosx_introspection/src/: flat_message_writer.cpp  idl_parser.cpp  ros_field.cpp  ros_message.cpp  ros_parser.cpp  ros_type.cpp  stringtree_leaf.cpp
plotjuggler_plugins/ParserROS/rosx_introspection/tests/: test_ros_field.cpp
(+127 files in other folders)
